# ai-be-projects

./: .gitignore  README.md  docker-compose.dynamic.yml  docker-compose.yml  env.example  test_framework_fix.py
ai-worker/: Dockerfile  Dockerfile.gpu  Dockerfile.pytorch-2.0  Dockerfile.pytorch-2.0-gpu  Dockerfile.pytorch-2.1  Dockerfile.pytorch-2.1-gpu  Dockerfile.sklearn  Dockerfile.tensorflow  pyproject.toml  run_worker.py
ai-worker/src/: __init__.py  __main__.py  config.py  gpu_manager.py  worker.py
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
docs/: API.md  ARCHITECTURE.md  CONCURRENCY.md  DEPLOYMENT.md  DYNAMIC_WORKERS.md  FAQ.md  FRONTEND_ARCHITECTURE.md  GPU_MEMORY_MANAGEMENT.md  LOCAL_DYNAMIC_WORKERS.md  WORKER_MANAGEMENT.md
frontend/: Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: SystemStatus.tsx
frontend/src/components/forms/: InferenceJobForm.tsx  TrainingJobForm.tsx
frontend/src/components/jobs/: JobList.tsx  JobStatusCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  Textarea.tsx
frontend/src/types/: index.ts
scripts/: docker-compose.sh  run_dynamic.sh  run_frontend_dev.sh  run_full_stack.sh  run_local.sh  run_local_dynamic.sh  run_worker_local.sh  setup_dev.sh  test_503_fix.py  test_api.py  test_basic.py  test_docker_compose.sh  test_frontend.py  test_frontend_inference.py  test_gpu_memory.py  test_inference_fix.py  test_job_cancellation.py  test_local_dynamic.py  test_worker_imports.py  test_worker_spawning.py
worker-manager/: Dockerfile  pyproject.local.toml  pyproject.toml
worker-manager/src/: local_worker_manager.py  worker_manager.py
