[project]
name = "ai-worker"
version = "0.1.0"
description = "AI training and inference worker service"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
# PyTorch 2.0 environment (CPU-only)
pytorch_2_0 = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "transformers>=4.30.0,<4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
]

# PyTorch 2.1 environment (CPU-only)
pytorch_2_1 = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
]

# TensorFlow environment
tensorflow = [
    "tensorflow==2.13.0",
    "tensorflow-hub>=0.14.0",
    "tensorflow-datasets>=4.9.0",
    "tqdm>=4.65.0",
]

# Scikit-learn environment
sklearn = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
]

# GPU support for PyTorch 2.0 (CUDA 11.8)
pytorch_2_0_gpu = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "transformers>=4.30.0,<4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
]

# GPU support for PyTorch 2.1 (CUDA 12.1)
pytorch_2_1_gpu = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tqdm>=4.65.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

# PyTorch indexes for different CUDA versions
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Source configuration for PyTorch packages
[tool.uv.sources]
# CPU-only builds for non-GPU extras
torch = [
    { index = "pytorch-cpu", extra = "pytorch_2_0" },
    { index = "pytorch-cpu", extra = "pytorch_2_1" },
    { index = "pytorch-cu118", extra = "pytorch_2_0_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu121", extra = "pytorch_2_1_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
    { index = "pytorch-cpu", extra = "pytorch_2_0" },
    { index = "pytorch-cpu", extra = "pytorch_2_1" },
    { index = "pytorch-cu118", extra = "pytorch_2_0_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu121", extra = "pytorch_2_1_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchaudio = [
    { index = "pytorch-cpu", extra = "pytorch_2_0" },
    { index = "pytorch-cpu", extra = "pytorch_2_1" },
    { index = "pytorch-cu118", extra = "pytorch_2_0_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu121", extra = "pytorch_2_1_gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv]
conflicts = [
    [
        { extra = "pytorch_2_0" },
        { extra = "pytorch_2_1" },
        { extra = "pytorch_2_0_gpu" },
        { extra = "pytorch_2_1_gpu" },
        { extra = "tensorflow" },
    ],
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
